--- a/app/views/pages/message.html.erb
+++ b/app/views/pages/message.html.erb
@@ -26,7 +26,7 @@
             </small>
           <div><p>May 2017</p>
 
-<p>“How is your congregation or organization living into the United Church of Christ commitment to work for a Just World for All?”1</p>
+<p><blockquote>“How is your congregation or organization living into the United Church of Christ commitment to work for a Just World for All?”1</blockquote></p>
 
 <p>This is the opening question of an article in a recent edition of the UCC’s “Keeping You E-Posted” newsletter. Our General Minister and President Rev. John C. Dorhauer will be travelling around the country this spring asking this question. He will also be “offering a preview of an all-church mission initiative that will be introduced at General Synod, as part of the Just World for All vision, 3 Great Loves: Love of Children, Love of Creation, Love of Neighbor.”</p>
 
