--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -61,25 +61,27 @@
     <% end %>
   </select>
   <div class="form-group">
-  <%= label_tag :event_owner %>
+  <%= label_tag :committee_ministry_id %>
   <select class="form-control" name="committee_ministry_id">
     <% CommitteeMinistry.all.each do |committee_ministry| %>
       <option value="<%= committee_ministry.id %>"><%= committee_ministry.name %></option>
     <% end %>
   </select>
   </div>
-  <div class="form-group" type="datetime-local">
+  <div class="form-group" name="datetime-local">
     <%= label_tag :start_time %> 
-    <%= text_field_tag :start_time, "", class: "form-control" %>
+    <%= datetime_field_tag :start_time, "", class: "form-control" %>
   </div>
   <div class="form-group">
     <%= label_tag :end_time %> 
-    <%= text_field_tag :end_time, "", class: "form-control" %>
+    <%= datetime_field_tag :end_time, "", class: "form-control" %>
   </div>
   <div class="form-group">
     <%= label_tag :description %>
     <%= text_field_tag :description, "", class: "form-control" %>
   </div>
+
+  <p>Are there tasks, donations, tickets with this event?</p>
    
   <%= submit_tag "Add event", class: "btn btn-primary" %>
 
