--- a/app/views/pages/boards.html.erb
+++ b/app/views/pages/boards.html.erb
@@ -20,15 +20,38 @@
         </div>
       </header>
 
-
+            
        
           <div class="col-md-9">
 
             <h2><strong>Committees and Ministries </strong></h2>
 
+        
             <% @committee_ministries.each do |committee_ministry| %>
-  <h2><a href="/boards/<%= committee_ministry.id %>"><%= committee_ministry.name %></a></h2>
-  <h3> ID number: <%= committee_ministry.id %></h3>
-  <p> Type: <%= committee_ministry.c_or_m %></p>
-
+   <div class="table-responsive">
+              <table class="table table-hover">
+                <thead>
+                  <tr>        
+  <th><h2><a href="/boards/<%= committee_ministry.id %>"><%= committee_ministry.name %></a></h2></th>
+  <th><h3> ID number: <%= committee_ministry.id %></h3></th>
+  <th><p> Type: <%= committee_ministry.c_or_m %></p></th>
+  </tr>
+  </thead>
+    </tbody>
+      </table>
+      </div>
   <% end %>
+
+
+           
+                     
+                
+               
+                   
+                  
+              
+   
+  
+
+                  
+                  
