--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -1,6 +1,4 @@
-
-
-<!-- WRAPPER -->
+ <!-- WRAPPER -->
     <div id="wrapper">
 
       <!-- PAGE TITLE -->
@@ -11,11 +9,11 @@
         -->
 
         <div class="container">
-          <h1>Events</h1>
+          <h1>Tickets</h1>
 
           <ul class="breadcrumb">
-            <li><a href="/tasks/new">Add new task</a></li>
-            <li><a href="/tasks">All open tasks</a></li>
+            <li><a href="/tickets/new">Create new ticket</a></li>
+            <li><a href="/tickets">Ticket</a></li>
             <li class="active">This event</li>
           </ul>
         </div>
@@ -40,36 +38,29 @@
           <div class="col-md-9">
 
 
-<form action="/tasks" method="post">
-<%= form_tag '/tasks', method: :post do %>
+<form action="/tickets" method="post">
+<%= form_tag '/tickets', method: :post do %>
   
-
   <div class="form-group">
-    <%= label_tag :description %> 
-    <%= text_field_tag :description, "", class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-  <%= label_tag :event %>
+  <%= label_tag :event_id %>
   <select class="form-control" name="event_id">
     <% Event.all.each do |event| %>
       <option value="<%= event.id %>"><%= event.name %></option>
     <% end %>
   </select>
   </div>
+  
   <div class="form-group">
-    <%= label_tag :start_time %> 
-    <%= text_field_tag :start_time, "", class: "form-control" %>
-  </div><div class="form-group">
-    <%= label_tag :end_time %> 
-    <%= text_field_tag :end_time, "", class: "form-control" %>
+    <%= label_tag :price_adult %> 
+    <%= text_field_tag :price_adult, "", class: "form-control" %>
   </div>
   <div class="form-group">
-    <%= label_tag :status %>
-    <%= text_field_tag :status, "", class: "form-control" %>
+    <%= label_tag :price_child %> 
+    <%= text_field_tag :price_child, "", class: "form-control" %>
   </div>
    
-  <%= submit_tag "Add task", class: "btn btn-primary" %>
+
+  <%= submit_tag "Create ticket", class: "btn btn-primary" %>
 
   <% end %>
 
